Change of index and show page header style

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<center> <h1 style="color:pink;" > List of Articles</h1>  </center>
+<center> <h1 style="color:brown;" > List of Articles</h1>  </center>
 
 <% @books.each do |book| %>
 	<table width = 350>
