Change of font style for Index and Show page

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <h1 style="color:brown;"> Details of Book </h1>
 
-<h2> Name : <i> <%= @book.name %> </i> </h2>
+<h2> Name : <i style="color:green;"> <%= @book.name %> </i> </h2>
 
-<h2> Description : <i> <%= @book.description %> </i> </h2>
+<h2> Description : <i style="color:green;"> <%= @book.description %> </i> </h2>
 
 <h2> <%= link_to "Back to index", root_path %> 
