change in show page

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,4 +4,4 @@
 
 <h2> Description : <i style="color:green;"> <%= @book.description %> </i> </h2>
 
-<h2> <%= link_to "Back to index", root_path %> 
+<h2> <%= link_to "Back to index page", root_path %> 
